# rust-game-prototype

./: Cargo.toml  README.md
components/backend/: Cargo.toml  entity_thread.rs  environment_thread.rs  lib.rs  storage_thread.rs
components/backend/ai/: human.rs  mapmemory.rs  mod.rs
components/backend_traits/: Cargo.toml  entity_thread.rs  environment_thread.rs  storage_thread.rs
components/common/: Cargo.toml  lib.rs  macros.rs  select2.rs  structs.rs  timer.rs
components/engine/: Cargo.toml  engine.rs  lib.rs  viewport.rs
components/storage/: :w  Cargo.toml  entity_thread.rs  environment_thread.rs  lib.rs  storage_thread.rs
components/storage_traits/: Cargo.toml  entity_thread.rs  environment_thread.rs  lib.rs  storage_thread.rs
components/tick/: Cargo.toml  lib.rs  tick_thread.rs
components/tick_traits/: Cargo.toml  lib.rs  tick_thread.rs
components/ui/: Cargo.toml  broadcaster.rs  button.rs  buttonmenu.rs  frame.rs  inspector.rs  lib.rs  map.rs  mapframe.rs  renderer.rs  splitter.rs  support.rs  texcache.rs  timecontrols.rs  ui.rs  viewframe.rs  viewport.rs  window.rs  windowframe.rs  windowmanager.rs
components/ui_new/: lib.rs
components/ui_old/: mapframe.rs  viewframe.rs  viewport.rs  windowframe.rs  windowmanager.rs
lib/engine/: Cargo.toml
lib/engine/src/: behavior.rs  gamerules.rs  gamerules_test.rs  lib.rs  physics.rs  universe.rs  usage.rs
libs/rust-sdl2_ttf/: Cargo.toml
libs/rust-sdl2_ttf/src/sdl2_ttf/: context.rs  font.rs  lib.rs
src/: main.rs  viewport.rs
