[package]
name = "backend"
version = "0.0.1"
authors = [""]

[lib]
name = "backend"
path = "lib.rs"

[dependencies]
rustc-serialize = "0.3.16"
rand = "0.3"

[dependencies.common]
path = "../common"

[dependencies.tick_traits]
path = "../tick_traits"

[dependencies.backend_traits]
path = "../backend_traits"
