[package]
name = "engine"
version = "0.0.1"
authors = [""]

[lib]
name = "engine"
path = "lib.rs"

[dependencies]
sdl2 = "0.15"
time = "0.1"

[dependencies.sdl2_ttf]
path = "../../libs/rust-sdl2_ttf"

[dependencies.ui]
path = "../ui"

[dependencies.common]
path = "../common"

[dependencies.storage_traits]
path = "../storage_traits"

[dependencies.storage]
path = "../storage"

[dependencies.tick_traits]
path = "../tick_traits"

[dependencies.tick]
path = "../tick"
