[package]
name = "engine"
version = "0.0.1"
authors = [""]

[lib]
name = "engine"
path = "lib.rs"

[dependencies.ui]
path = "../ui"

[dependencies.common]
path = "../common"

[dependencies.backend_traits]
path = "../backend_traits"

[dependencies.backend]
path = "../backend"

[dependencies.tick_traits]
path = "../tick_traits"

[dependencies.tick]
path = "../tick"
