[package]
name = "ui"
version = "0.0.1"
authors = [""]

[lib]
name = "ui"
path = "lib.rs"

[dependencies]
sdl2 = "0.12"
rustc-serialize = "0.3.16"
rand = "0.3"
time = "0.1"

[dependencies.common]
path = "../common"

[dependencies.tick_traits]
path = "../tick_traits"

[dependencies.storage_traits]
path = "../storage_traits"
