[package]
name = "ui"
version = "0.0.1"
authors = [""]

[lib]
name = "ui"
path = "lib.rs"

[dependencies]
glium = "0.13"
imgui = "0.0.6"
time = "0.1"

[dependencies.common]
path = "../common"

[dependencies.tick_traits]
path = "../tick_traits"

[dependencies.storage_traits]
path = "../storage_traits"
