[package]
name = "ui"
version = "0.0.1"
authors = [""]

[lib]
name = "ui"
path = "lib.rs"

[dependencies]
glutin = "0.4"
glium = "0.13"
time = "0.1"
image = "0.7"
imgui = "0.0.6"

[dependencies.common]
path = "../common"

[dependencies.tick_traits]
path = "../tick_traits"

[dependencies.backend_traits]
path = "../backend_traits"
